--- a/client/package.json
+++ b/client/package.json
@@ -40,10 +40,5 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.45",
-    "tailwindcss": "^3.4.10"
-  }
+  "license": "ISC"
 }
